--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <a href="https://sameersoftwareengineer.com">SAMEER-Software Engineer</a>
-    <title>SAMEER-Software Engineer</title>
+    <title>SAMEER-Software Engineer./title>
     <style>
     </style>
 </head>
